# INF2004

./: CMakeLists.txt  ConfigReadMe  Documentation  README.md  cgi.h  htmldata.c  main.c  secrets.h  ssi.h
Documentations/: readme.txt
html_files/: config.shtml  failed_login.shtml  gmail_login.shtml  index.shtml
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: library.json
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/PlatformIO/bench2/: platformio.ini
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/PlatformIO/data_logger/: platformio.ini
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/command_line/: CMakeLists.txt  data_log_demo.c  dev_brd.hw_config.c  exp_mod_A_SDIO.hw_config.c  exp_mod_A_SPI.hw_config.c  main.cpp  maker_pi_pico.hw_config.c  thing_plus.hw_config.c
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/dynamic_config/: CMakeLists.txt  main.cpp
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/simple/: CMakeLists.txt  hw_config.c
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/simple_sdio/: CMakeLists.txt  main.c
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/include/: FatFsSd.h
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/: CMakeLists.txt
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/include/: my_debug.h
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/: sd_card.c
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/source/: ff_stdio.c  glue.c  my_debug.c  rtc.c
project/: cgi.h  htmldata.c  main.c  pico_sdk_import.cmake:Zone.Identifier
project/html_files/: config.shtml  index.shtml
project/sd_card/: CMakeLists.txt  hw_config.c  sd_card.c
(+26 files in other folders)
